usui/USUI.css
/* 
    UserScript UI
    -- made by CCN0 -- https://ccn0.net/pages/usui -- https://github.com/ccn0/usui/ --
    version 0.015beta
*/

.USUI_popup {
    z-index: 400;
    line-height: 24.5px;
    width: 480px;
    height: 80vh;
    border: 1px solid #000000;
    border-radius: 0 12px 12px 12px;
    overflow: hidden;
    position: fixed;
    top: 60px;
    left: 80px;
    background-color: #ffffff;
    box-shadow: #00000050 2px 2px 15px;
    font-family: sans-serif;
}

.USUI_textcolor {
    color: #000;
}

.USUI_popuptitlebar {
    display: flex;
    border-bottom: 1px solid #000;
    background-color: #666666;
    user-select: none;
}

.USUI_titlebarbutton {
    height: 24px;
    padding: 5px;
    line-height: 0.5rem;
    border: 2px outset;
    &:active {
        border: 2px inset;
    }
}

.USUI_popupcontent {
    color: #000000;
    max-height: calc(80vh - 26px);
    height: 100%;
    overflow: auto;
    overflow-x: clip;
}

.USUI_popupitem {
    width: 100%;
    border-bottom: 1px solid #aaa;
    display: flex;
    background-color: #fcfcfc;
}

.USUI_titlespan {
    font-size: 14px;
    margin: 0 5px;
    color: #ffffff;
    font-weight: bold;
}

.USUI_button {
    font-size: 14px;
    cursor: pointer;
    font-family: rubik, helvetica, arial, sans-serif;
    text-align: center;
    align-content: center;
    background-color: #e9e9ed;
    border: 2px outset #aaa;
    color: #000;
    &:active,
    .button:has(img:active) {
        border: 2px inset #aaa;
        background-color: #aaaaaa;
    }
    &[disabled] {
        text-decoration: solid line-through 2px;
    }
}

.USUI_M_prompt {
    position: fixed;
    padding: 8px;
    width: auto;
    height: auto;
    background-color: #ffffff;
    border: 2px outset #aaa;
    z-index: 10000;
    display: flex;
    flex-direction: column;
}

.USUI_M_colorInput {
    display: inline-block;
    box-sizing: border-box;
    vertical-align: middle;
    float: none;
    z-index: auto;
    width: 64px;
    height: 32px;
    position: static;
    padding: 5px;
    border: 1px solid #7f7f7f;
    background-color: #d6d6d6;
    border-radius: 4px;
    align-content: center;
    .USUI_M_colorInput_chip {
        box-sizing: border-box;
        background-color: #000000;
        border: 1px solid #7f7f7f;
        width: 100%;
        height: 100%;
    }
    &:hover {
        background-color: #b4b4b4;
        &:active {
            background-color: #8a8a8a;
        }
    }
}

.USUI_M_bbContainer {
    max-width: 100%;
    display: flex;
    flex-direction: row;
    height: 32px;
    &:not(:last-child) {
        margin-bottom: 2px;
    }
}

.USUI_M_bbContRange {
    height: 48px;
}

.USUI_M_bbButtons {
    max-width: 100%;
    gap:2px;
    button {
        flex: 1;
    }
}
.USUI_M_bbLabel,
.USUI_M_bbInput {
    align-content: center;
    flex: 1;
}

.USUI_M_bbInput[type="range"] {
    margin:0;
}

.USUI_M_tickInCont {
    flex: 1;
    width: 100%;
    display: flex;
    flex-direction: column;
}

.USUI_M_tickCont {
    display: flex;
    max-height: 24px;
    flex: 1;
    font-size: 100%;
    user-select: none;
    align-content: center;
    align-items: center;
}

.USUI_M_tick {
    width: fit-content;
    flex: 1;
    &:nth-child(1) {
        text-align: left;
    }
    &:nth-child(2) {
        text-align: center;
    }
    &:nth-child(3) {
        text-align: right;
    }
}

